--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <nav class="navbar">
         <ul class="link-group">
             <li class="link active"><a href="#">home</a></li>
-            <li class="link"><a href="#">home</a></li>
+            <li class="link"><a href="#">projects</a></li>
             <li class="link"><a href="#">home</a></li>
             <li class="link"><a href="#">home</a></li>
         </ul>
@@ -21,12 +21,29 @@
 
     <section class="home-section">
         <h1 class="hero-heading"> hello, i am<br>Niladri<br>
-            <img src="" alt="">
+            <img src="images/_DSC0681(Edited).JPG" class="home-img" alt="my-pic">
 
         </h1>
 
     </section>
 
+    <section class="project-section">
+        <h1 class="project-heading">some of my projects</h1>
+        <div class="project-container">
+            <div class="project-card">
+                <img src="images/portfolio-1.jpeg" class="project-img" alt="p1">
+                <div class="project-content">
+                    <h1 class="project-title">project 01</h1>
+                    <p class ="project-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est officia veritatis perspiciatis ipsam atque quis incidunt nulla assumenda quidem quo asperiores minima, magnam quaerat alias numquam dolores quisquam omnis perferendis?
+                    </p>
+                    <div class="project-btn-grp">
+                        <button class="project-btn github">github repo</button>
+                        <button class="project-btn live">see live</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <script src="script.js"></script>
