--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
     </nav>
 
-    <section class="home-section">
+    <section class="home-section active">
         <h1 class="hero-heading"> hello, i am<br>Niladri<br>
             <img src="images/_DSC0681(Edited).JPG" class="home-img" alt="my-pic">
 
@@ -27,7 +27,7 @@
 
     </section>
 
-    <section class="project-section">
+    <section class="project-section active">
         <h1 class="project-heading">some of my projects</h1>
         <div class="project-container">
             <div class="project-card">
@@ -42,9 +42,62 @@
                     </div>
                 </div>
             </div>
+            <div class="project-card">
+                <img src="images/portfolio-2.jpeg" class="project-img" alt="p1">
+                <div class="project-content">
+                    <h1 class="project-title">project 01</h1>
+                    <p class="project-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est officia veritatis
+                        perspiciatis ipsam atque quis incidunt nulla assumenda quidem quo asperiores minima, magnam quaerat alias
+                        numquam dolores quisquam omnis perferendis?
+                    </p>
+                    <div class="project-btn-grp">
+                        <button class="project-btn github">github repo</button>
+                        <button class="project-btn live">see live</button>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="images/portfolio-3.jpeg" class="project-img" alt="p1">
+                <div class="project-content">
+                    <h1 class="project-title">project 01</h1>
+                    <p class="project-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est officia veritatis
+                        perspiciatis ipsam atque quis incidunt nulla assumenda quidem quo asperiores minima, magnam quaerat alias
+                        numquam dolores quisquam omnis perferendis?
+                    </p>
+                    <div class="project-btn-grp">
+                        <button class="project-btn github">github repo</button>
+                        <button class="project-btn live">see live</button>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="images/portfolio-5.jpeg" class="project-img" alt="p1">
+                <div class="project-content">
+                    <h1 class="project-title">project 01</h1>
+                    <p class="project-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est officia veritatis
+                        perspiciatis ipsam atque quis incidunt nulla assumenda quidem quo asperiores minima, magnam quaerat alias
+                        numquam dolores quisquam omnis perferendis?
+                    </p>
+                    <div class="project-btn-grp">
+                        <button class="project-btn github">github repo</button>
+                        <button class="project-btn live">see live</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
+    <section class="about-section">
+        <div class="about">
+            <div class="about-img-container">
+                <img src="images/portfolio-1.jpeg" class="about-img"  alt="">
+                <button class="download-cv-btn">Download CV</button>
+            </div>
+            <p class="about-info">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, aliquid perferendis minus totam reprehenderit assumenda id porro. Laborum, dolorum similique quisquam modi illum aut asperiores ad incidunt. Atque, dolorum praesentium.
+            </p>
+        </div>
+    </section>
 
     <script src="script.js"></script>
 </body>
