--- a/index.html
+++ b/index.html
@@ -97,6 +97,57 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, aliquid perferendis minus totam reprehenderit assumenda id porro. Laborum, dolorum similique quisquam modi illum aut asperiores ad incidunt. Atque, dolorum praesentium.
             </p>
         </div>
+        <div class="skill-section">
+            <h1 class="heading">skiills</h1>
+            <div class="skills-container">
+                <div class="skill-card">
+                    <img src="images/html.png" class="skill-img" alt="skill-img">
+                    <div class="skill-level">78%</div>
+                    <h1 class="skill-name">HTML</h1>
+                    <p class="skill-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur neque ea possimus sapiente eos quas voluptatibus dolorem blanditiis, facere itaque.</p>
+                </div>
+                <div class="skill-card">
+                    <img src="images/css.png" class="skill-img" alt="skill-img">
+                    <div class="skill-level">78%</div>
+                    <h1 class="skill-name">CSS</h1>
+                    <p class="skill-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur neque ea possimus sapiente
+                        eos quas voluptatibus dolorem blanditiis, facere itaque.</p>
+                </div>
+                <div class="skill-card">
+                    <img src="images/js.png" class="skill-img" alt="skill-img">
+                    <div class="skill-level">78%</div>
+                    <h1 class="skill-name">JavaScript</h1>
+                    <p class="skill-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur neque ea possimus sapiente
+                        eos quas voluptatibus dolorem blanditiis, facere itaque.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="timeline">
+            <h1 class="heading">Education and experience</h1>
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="card-title">2005-2017</h1>
+                    <p class="card-detail">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, accusamus consequatur non, fugit ipsum impedit est atque inventore, officia ipsam perspiciatis? Error soluta, commodi quos quis maxime beatae inventore? Id!</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="card-title">2017-2019</h1>
+                    <p class="card-detail">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, accusamus consequatur
+                        non, fugit ipsum impedit est atque inventore, officia ipsam perspiciatis? Error soluta, commodi quos quis
+                        maxime beatae inventore? Id!</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="card-title">2019-2023(Ongoing)</h1>
+                    <p class="card-detail">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, accusamus consequatur
+                        non, fugit ipsum impedit est atque inventore, officia ipsam perspiciatis? Error soluta, commodi quos quis
+                        maxime beatae inventore? Id!</p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <script src="script.js"></script>
