--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
                 </div>
             </div>
         </div>
-
+    </section>
+    <section class="about-section">
         <div class="timeline">
             <h1 class="heading">Education and experience</h1>
             <div class="card">
@@ -148,6 +149,16 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section class="contact-section">
+        <form class="contact-form">
+            <input type="text" name="name" id="name" autocomplete="off" placeholder="name">
+            <input type="text" name="email" id="email" autocomplete="off" placeholder="email">
+            <textarea name="msg" id="msg" placeholder="message" autocomplete="off"></textarea>
+            <button type="submit" class="form-submit-btn">contact</button>
+        </form>
+
     </section>
 
     <script src="script.js"></script>
