--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <ul class="link-group">
             <li class="link active"><a href="#">home</a></li>
             <li class="link"><a href="#">projects</a></li>
-            <li class="link"><a href="#">home</a></li>
-            <li class="link"><a href="#">home</a></li>
+            <li class="link"><a href="#">about</a></li>
+            <li class="link"><a href="#">contact</a></li>
         </ul>
     </nav>
 
@@ -87,7 +87,7 @@
         </div>
     </section>
 
-    <section class="about-section">
+    <section class="about-section active">
         <div class="about">
             <div class="about-img-container">
                 <img src="images/portfolio-1.jpeg" class="about-img"  alt="">
@@ -97,7 +97,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, aliquid perferendis minus totam reprehenderit assumenda id porro. Laborum, dolorum similique quisquam modi illum aut asperiores ad incidunt. Atque, dolorum praesentium.
             </p>
         </div>
-        <div class="skill-section">
+        <div class="skill-section active">
             <h1 class="heading">skiills</h1>
             <div class="skills-container">
                 <div class="skill-card">
@@ -122,8 +122,6 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section class="about-section">
         <div class="timeline">
             <h1 class="heading">Education and experience</h1>
             <div class="card">
@@ -151,7 +149,7 @@
         </div>
     </section>
 
-    <section class="contact-section">
+    <section class="contact-section active">
         <form class="contact-form">
             <input type="text" name="name" id="name" autocomplete="off" placeholder="name">
             <input type="text" name="email" id="email" autocomplete="off" placeholder="email">
