--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
 
     <section class="home-section active">
-        <h1 class="hero-heading"> hello, i am<br>Niladri<br>
+        <h1 class="hero-heading"> Hello, i am<br>Niladri<br>
             <img src="images/_DSC0681(Edited).JPG" class="home-img" alt="my-pic">
 
         </h1>
@@ -33,8 +33,8 @@
             <div class="project-card">
                 <img src="images/portfolio-1.jpeg" class="project-img" alt="p1">
                 <div class="project-content">
-                    <h1 class="project-title">project 01</h1>
-                    <p class ="project-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est officia veritatis perspiciatis ipsam atque quis incidunt nulla assumenda quidem quo asperiores minima, magnam quaerat alias numquam dolores quisquam omnis perferendis?
+                    <h1 class="project-title">Project 01</h1>
+                    <p class ="project-info">Personal Website
                     </p>
                     <div class="project-btn-grp">
                         <button class="project-btn github">github repo</button>
@@ -45,10 +45,8 @@
             <div class="project-card">
                 <img src="images/portfolio-2.jpeg" class="project-img" alt="p1">
                 <div class="project-content">
-                    <h1 class="project-title">project 01</h1>
-                    <p class="project-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est officia veritatis
-                        perspiciatis ipsam atque quis incidunt nulla assumenda quidem quo asperiores minima, magnam quaerat alias
-                        numquam dolores quisquam omnis perferendis?
+                    <h1 class="project-title">project 02</h1>
+                    <p class="project-info">Dad Jokes - a chrome extension that shows random jokes by calling an api.
                     </p>
                     <div class="project-btn-grp">
                         <button class="project-btn github">github repo</button>
@@ -59,10 +57,8 @@
             <div class="project-card">
                 <img src="images/portfolio-3.jpeg" class="project-img" alt="p1">
                 <div class="project-content">
-                    <h1 class="project-title">project 01</h1>
-                    <p class="project-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est officia veritatis
-                        perspiciatis ipsam atque quis incidunt nulla assumenda quidem quo asperiores minima, magnam quaerat alias
-                        numquam dolores quisquam omnis perferendis?
+                    <h1 class="project-title">project 03</h1>
+                    <p class="project-info">Todo List
                     </p>
                     <div class="project-btn-grp">
                         <button class="project-btn github">github repo</button>
@@ -70,20 +66,19 @@
                     </div>
                 </div>
             </div>
-            <div class="project-card">
+            <!--<div class="project-card">
                 <img src="images/portfolio-5.jpeg" class="project-img" alt="p1">
                 <div class="project-content">
-                    <h1 class="project-title">project 01</h1>
-                    <p class="project-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est officia veritatis
-                        perspiciatis ipsam atque quis incidunt nulla assumenda quidem quo asperiores minima, magnam quaerat alias
-                        numquam dolores quisquam omnis perferendis?
+                    <h1 class="project-title">project 04</h1>
+                    <p class="project-info">
+                        // info of 4th project //
                     </p>
                     <div class="project-btn-grp">
                         <button class="project-btn github">github repo</button>
                         <button class="project-btn live">see live</button>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
     </section>
 
@@ -93,33 +88,33 @@
                 <img src="images/portfolio-1.jpeg" class="about-img"  alt="">
                 <button class="download-cv-btn">Download CV</button>
             </div>
-            <p class="about-info">
+            <!-- <p class="about-info">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, aliquid perferendis minus totam reprehenderit assumenda id porro. Laborum, dolorum similique quisquam modi illum aut asperiores ad incidunt. Atque, dolorum praesentium.
-            </p>
+            </p> -->
         </div>
         <div class="skill-section active">
             <h1 class="heading">skiills</h1>
             <div class="skills-container">
                 <div class="skill-card">
                     <img src="images/html.png" class="skill-img" alt="skill-img">
-                    <div class="skill-level">78%</div>
+                    <div class="skill-level">60%</div>
                     <h1 class="skill-name">HTML</h1>
-                    <p class="skill-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur neque ea possimus sapiente eos quas voluptatibus dolorem blanditiis, facere itaque.</p>
-                </div>
+                    <!--<p class="skill-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur neque ea possimus sapiente eos quas voluptatibus dolorem blanditiis, facere itaque.</p>
+                </div> -->
                 <div class="skill-card">
                     <img src="images/css.png" class="skill-img" alt="skill-img">
-                    <div class="skill-level">78%</div>
+                    <div class="skill-level">60%</div>
                     <h1 class="skill-name">CSS</h1>
-                    <p class="skill-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur neque ea possimus sapiente
-                        eos quas voluptatibus dolorem blanditiis, facere itaque.</p>
+                    <!-- <p class="skill-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur neque ea possimus sapiente
+                        eos quas voluptatibus dolorem blanditiis, facere itaque.</p> -->
                 </div>
-                <div class="skill-card">
+                <!--<div class="skill-card">
                     <img src="images/js.png" class="skill-img" alt="skill-img">
                     <div class="skill-level">78%</div>
                     <h1 class="skill-name">JavaScript</h1>
                     <p class="skill-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur neque ea possimus sapiente
                         eos quas voluptatibus dolorem blanditiis, facere itaque.</p>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="timeline">
