--- a/index.html
+++ b/index.html
@@ -122,23 +122,25 @@
             <div class="card">
                 <div class="card-body">
                     <h1 class="card-title">2005-2017</h1>
-                    <p class="card-detail">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, accusamus consequatur non, fugit ipsum impedit est atque inventore, officia ipsam perspiciatis? Error soluta, commodi quos quis maxime beatae inventore? Id!</p>
+                    <p class="card-detail">
+                        I pursued my class 10 from St.Stephen,s School Dumdum.
+                    </p>
                 </div>
             </div>
             <div class="card">
                 <div class="card-body">
                     <h1 class="card-title">2017-2019</h1>
-                    <p class="card-detail">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, accusamus consequatur
-                        non, fugit ipsum impedit est atque inventore, officia ipsam perspiciatis? Error soluta, commodi quos quis
-                        maxime beatae inventore? Id!</p>
+                    <p class="card-detail">
+                        I pursued my class 12 from St.Stephen,s School Dumdum.
+                    </p>
                 </div>
             </div>
             <div class="card">
                 <div class="card-body">
                     <h1 class="card-title">2019-2023(Ongoing)</h1>
-                    <p class="card-detail">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, accusamus consequatur
-                        non, fugit ipsum impedit est atque inventore, officia ipsam perspiciatis? Error soluta, commodi quos quis
-                        maxime beatae inventore? Id!</p>
+                    <p class="card-detail">
+                        I am currently pursuing my BTech in Electrical Engineering from Techno International NewTown.
+                    </p>
                 </div>
             </div>
         </div>
@@ -152,8 +154,6 @@
             <button type="submit" class="form-submit-btn">contact</button>
         </form>
     </section>
-
-    <script src="script.js"></script>
 </body>
 
 </html>
